# zoidberg

./: .drone.yml  Cargo.toml
backends/htcondor/: run.sh  worker.submit
snakemake/: Snakefile
snakemake/zoidberg/: grid-submit.py
src/: main.rs
submitters/snakemake/: Snakefile
submitters/snakemake/zoidberg/: grid-status.py  grid-submit.py
zoidberg_client/: Cargo.toml
zoidberg_client/src/: main.rs
zoidberg_lib/: Cargo.toml
zoidberg_lib/src/: types.rs
zoidberg_server/: Cargo.toml
zoidberg_server/src/: auth.rs  main.rs  webpage.rs
