[package]
name = "zoidberg_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.zoidberg_lib]
path = "../zoidberg_lib"
version = "0.1.0"

[dependencies]
actix-web = "4"
serde_json = "1.0"
clap = "3.2"
env_logger = "0.9"
log = "0.4"
