[package]
name = "zoidberg_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.zoidberg_lib]
path = "../zoidberg_lib"
version = "0.1.0"

[dependencies]
actix-web = "4"
serde_json = "1.0"
clap = "3.2"
env_logger = "0.9"
log = "0.4"
futures = "0.3.24"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.22"
uuid = { version = "1.1.2", features = ["v4"] }
